marshal charmaps so they take less memory
Ignore-this: 2cc92c7fd8f074ef3683445e252be7bf

darcs-hash:20090223185953-c41ad-b5796cc72b1d19e0eaeaf4a7af8becb5ae4f779d

--- a/META.in
+++ b/META.in
@@ -1,7 +1,7 @@
 # -*- conf -*-
 name = "encoding"
 version = "@VERSION@"
-browse_interfaces = "Encoding Enc_int_map Enc_string Enc_utf8"
+browse_interfaces = "Encoding Encoding_table Enc_string Enc_utf8"
 description = "Encoding/decoding of unicode code-point"
 archive(byte) = "encoding.cma"
 archive(native) = "encoding.cmxa"
