change name encoding --> ocaml-text
Ignore-this: b5fe3c5dfdce1c0f66c9b9e2a39f0538

darcs-hash:20090504111149-c41ad-713b5927d180a51e0efbb9914ba53f4b289dbb23

--- a/META.in
+++ b/META.in
@@ -1,7 +1,7 @@
 # -*- conf -*-
-name = "encoding"
+name = "text"
 version = "@VERSION@"
-browse_interfaces = "Encoding Text"
+browse_interfaces = "Text Encoding"
 description = "Character encodings and UTF-8 text manipulation"
-archive(byte) = "encoding.cma"
-archive(native) = "encoding.cmxa"
+archive(byte) = "text.cma"
+archive(native) = "text.cmxa"
