building of cmxs
Ignore-this: 3eab3684b31e76c16dd79d174c0b04b5

darcs-hash:20100109220306-c41ad-78a5e3a44d6ed76ee3d175dafa934726d3c46089

--- a/META.in
+++ b/META.in
@@ -5,3 +5,5 @@ browse_interfaces = "Text Encoding"
 description = "Character encodings and UTF-8 text manipulation"
 archive(byte) = "text.cma"
 archive(native) = "text.cmxa"
+archive(plugin,byte) = "text.cma"
+archive(plugin,native) = "text.cmxs"
