start of the syntax extension for regular expressions
Ignore-this: 398e553807e6ee1ebd717b06660fcaf

darcs-hash:20100117230319-c41ad-66fbe6ff4184943919c381b6ff4c636f06dfd68d

--- a/META.in
+++ b/META.in
@@ -7,3 +7,15 @@ archive(byte) = "text.cma"
 archive(native) = "text.cmxa"
 archive(plugin,byte) = "text.cma"
 archive(plugin,native) = "text.cmxs"
+
+package "pcre" (
+  exists_if = "pa_text_pcre.cmo"
+  description = "Syntactic sugars for regular expression using PCRE"
+  requires = "text pcre camlp4"
+  archive(byte) = "text_pcre.cma"
+  archive(native) = "text_pcre.cmxa"
+  archive(plugin,byte) = "text_pcre.cma"
+  archive(plugin,native) = "text_pcre.cmxs"
+  archive(syntax,preprocessor) = "pa_text_pcre.cmo"
+  archive(syntax,toploop) = "pa_text_pcre.cmo"
+)
