split pa_text_pcre into smaller modules
Ignore-this: 7b43a439bfbb7ed8f8813b655b11d07b

darcs-hash:20100120145207-c41ad-3a81f41939553b85142fb100cc6afe44f140cbb1

--- a/META.in
+++ b/META.in
@@ -16,6 +16,6 @@ package "pcre" (
   archive(native) = "text_pcre.cmxa"
   archive(plugin,byte) = "text_pcre.cma"
   archive(plugin,native) = "text_pcre.cmxs"
-  archive(syntax,preprocessor) = "text.cma pa_text_pcre.cmo"
-  archive(syntax,toploop) += "pa_text_pcre.cmo"
+  archive(syntax,preprocessor) = "text.cma pa_text_pcre.cma"
+  archive(syntax,toploop) += "pa_text_pcre.cma"
 )
